fortnite rizz party

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,10 +33,9 @@ import Layout from "../layouts/Layout.astro";
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1>Welcome to <span class="text-gradient">the fortnite rizz party</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			interedging v6
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
