--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ import { ViewTransitions } from "astro:transitions";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="shortcut icon" href="/assets/media/favicons/default.png"/>
     <title>Interstellar</title>
     <ViewTransitions />
     <script src="/assets/scripts/global.js" is:inline defer></script>
