--- a/src/pages/ap.astro
+++ b/src/pages/ap.astro
@@ -2,7 +2,6 @@
 import Layout from "../layouts/Main.astro";
 ---
 
-<script src="../lib/cloak.ts"></script>
 <Layout>
-  <main>home</main>
+  <div>apps</div>
 </Layout>
