--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -4,5 +4,5 @@ import Layout from "../layouts/Main.astro";
 
 <script src="../lib/cloak.ts"></script>
 <Layout>
-  <main>home</main>
+  <main>games</main>
 </Layout>
