--- a/src/pages/tb.astro
+++ b/src/pages/tb.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Main.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <script src="../lib/cloak.ts"></script>
 <Layout>
-  <main>home</main>
+  <main>tabs</main>
 </Layout>
