--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import "../global.css";
+
 import { ViewTransitions } from "astro:transitions";
 ---
 
@@ -11,48 +13,25 @@ import { ViewTransitions } from "astro:transitions";
     <link rel="shortcut icon" href="/assets/media/favicons/default.png" />
     <title>Interstellar</title>
     <ViewTransitions />
+    <script is:inline src="/assets/bundled/v.ble.js" defer></script>
+    <script is:inline src="/assets/bundled/v.cfg.js" defer></script>
+    <script is:inline src="/assets/ex/index.js" defer></script>
+    <script>
+      // @ts-expect-error shut
+      import { SetTransport } from "@mercuryworkshop/bare-mux";
+      window.addEventListener("DOMContentLoaded", () => {
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.ready.then(() => {
+            SetTransport("EpxMod.EpoxyClient", {
+              wisp: `${location.protocol.replace("http", "ws")}//${location.host}/f/`,
+            });
+          });
+          navigator.serviceWorker.register("/sw.js").then(() => console.log("uv registered"));
+        }
+      });
+    </script>
   </head>
   <body>
     <slot />
   </body>
 </html>
-<style is:global>
-  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-  @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-
-  @layer base {
-    :root {
-      --background-image: url("/assets/media/backgrounds/full-inverted.png");
-      --background: #fdfcfe; /* radix 1 */
-      --background-secondary: #faf8ff; /* radix 2 */
-      --interactive: #ebe4ff; /* radix 4 */
-      --interactive-secondary: #e1d9ff; /* radix 5 */
-      --border: #c2b5f5; /* radix 7 */
-      --accent: #6e56cf; /* radix 9 */
-      --text: #2f265f; /* radix 12 */
-      --text-secondary: #6550b9; /* radix 11 */
-    }
-    .dark {
-        --background-image: url("/assets/media/backgrounds/full-main.png");
-        --background: #4422FF0F;
-        --background-secondary: #853FF916;
-        --interactive: #7D51FD50;
-        --interactive-secondary: #845FFD5F;
-        --border: #9879FF83;
-        --accent: #8668FFCC;
-        --text: #E3DEFFFE;
-        --text-secondary: #BAA7FF;
-    }
-  }
- @layer base {
-    body {
-        background-image: var(--background-image);
-        @apply h-full font-sans bg-background text-text bg-cover bg-center bg-no-repeat bg-fixed;
-    }
-    * {
-        @apply border-border;
-    }
- }
-</style>
