--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -2,7 +2,6 @@
 import Layout from "../layouts/Main.astro";
 ---
 
-<script src="../lib/cloak.ts"></script>
 <Layout>
-  <main>games</main>
+  <div>games</div>
 </Layout>
