--- a/src/pages/tb.astro
+++ b/src/pages/tb.astro
@@ -2,7 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<script src="../lib/cloak.ts"></script>
 <Layout>
-  <main>tabs</main>
+  <div>tabs</div>
 </Layout>
