--- a/src/pages/to.astro
+++ b/src/pages/to.astro
@@ -1,7 +1,36 @@
 ---
+import { Image } from "astro:assets";
+import { Wrench } from "lucide-astro";
+import Obfuscated from "../components/Obfuscated.astro";
 import Layout from "../layouts/Main.astro";
+import { ASSET_URL } from "../lib/asset";
+const tools = await (await fetch(`${ASSET_URL}/json/tools.json`)).json();
 ---
 
 <Layout>
-  <div>tools</div>
+  <div class="flex justify-center py-8 flex-col items-center">
+    <div class="text-4xl font-bold text-text-secondary inline-flex mb-4">
+      <Wrench class="size-12 mr-2" />
+      Tools
+    </div>
+    <div class="flex flex-wrap justify-center gap-4 flex-row mt-30">
+      {
+        tools.map((tool: any) => (
+          <a href={tool.link}>
+            <div class="flex flex-col items-center p-4 bg-secondary size-48 rounded-md space-y-4 hover:bg-interactive duration-150">
+              <Image
+                loading="eager"
+                src={ASSET_URL + tool.image}
+                alt={tool.name}
+                height={145}
+                width={145}
+                class="size-24 rounded-md"
+              />
+              <Obfuscated class="text-center font-semibold text-xl text-wrap" text={tool.name} />
+            </div>
+          </a>
+        ))
+      }
+    </div>
+  </div>
 </Layout>
