--- a/src/pages/ap.astro
+++ b/src/pages/ap.astro
@@ -18,14 +18,7 @@ const apps: App[] = await (await fetch(`${ASSET_URL}/json/apps.json`)).json();
         apps.map((app) => (
           <a href={app.link}>
             <div class="flex flex-col items-center p-4 bg-secondary size-48 rounded-md space-y-4 hover:bg-interactive duration-150">
-              <Image
-                loading="eager"
-                src={ASSET_URL + app.image}
-                alt={app.name}
-                height={145}
-                width={145}
-                class="size-24 rounded-md"
-              />
+              <Image loading="eager" src={ASSET_URL + app.image} alt={app.name} height={145} width={145} class="size-24 rounded-md" />
               <Obfuscated class="text-center font-semibold text-xl text-wrap" text={app.name} />
             </div>
           </a>
