--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ declare global {
     };
   }
 }
-import "../global.css";
+import "@/global.css";
 
 import { ViewTransitions } from "astro:transitions";
 ---
