--- a/src/pages/ga.astro
+++ b/src/pages/ga.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
 import { Gamepad2 } from "lucide-astro";
-import Obfuscated from "../components/Obfuscated.astro";
-import Layout from "../layouts/Main.astro";
-import { ASSET_URL } from "../lib/asset";
-const games = await (await fetch(`${ASSET_URL}/json/games.json`)).json();
+import Obfuscated from "@/components/Obfuscated.astro";
+import Layout from "@/layouts/Main.astro";
+import { ASSET_URL, type Asset } from "@/lib/asset";
+const games: Asset[] = await (await fetch(`${ASSET_URL}/json/games.json`)).json();
 ---
 
 <Layout>
@@ -15,15 +15,20 @@ const games = await (await fetch(`${ASSET_URL}/json/games.json`)).json();
     </div>
     <div class="flex flex-wrap justify-center gap-4 flex-row mt-30">
       {
-        games.map((game: any) => (
-          <a href={game.link}>
+        games.map((game) => (
+          <button data-asset={JSON.stringify(game)}>
             <div class="flex flex-col items-center p-4 bg-secondary size-48 rounded-md space-y-4 hover:bg-interactive duration-150">
               <Image loading="eager" src={ASSET_URL + game.image} alt={game.name} height={145} width={145} class="size-24 rounded-md" />
-              <Obfuscated class="text-center font-semibold text-xl text-wrap" text={game.name} />
+              <Obfuscated
+                class="text-center font-semibold text-xl text-wrap"
+                class:list={{ "text-red-600": game.error, "text-yellow-400": game.partial }}
+                text={game.name}
+              />
             </div>
-          </a>
+          </button>
         ))
       }
     </div>
   </div>
 </Layout>
+<script src="@/lib/asset-script.ts"></script>
