--- a/src/pages/to.astro
+++ b/src/pages/to.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
 import { Wrench } from "lucide-astro";
-import Obfuscated from "../components/Obfuscated.astro";
-import Layout from "../layouts/Main.astro";
-import { ASSET_URL } from "../lib/asset";
-const tools = await (await fetch(`${ASSET_URL}/json/tools.json`)).json();
+import Obfuscated from "@/components/Obfuscated.astro";
+import Layout from "@/layouts/Main.astro";
+import { ASSET_URL, type Asset } from "@/lib/asset";
+const tools: Asset[] = await (await fetch(`${ASSET_URL}/json/tools.json`)).json();
 ---
 
 <Layout>
@@ -15,15 +15,16 @@ const tools = await (await fetch(`${ASSET_URL}/json/tools.json`)).json();
     </div>
     <div class="flex flex-wrap justify-center gap-4 flex-row mt-30">
       {
-        tools.map((tool: any) => (
-          <a href={tool.link}>
+        tools.map((tool) => (
+          <button>
             <div class="flex flex-col items-center p-4 bg-secondary size-48 rounded-md space-y-4 hover:bg-interactive duration-150">
               <Image loading="eager" src={ASSET_URL + tool.image} alt={tool.name} height={145} width={145} class="size-24 rounded-md" />
               <Obfuscated class="text-center font-semibold text-xl text-wrap" text={tool.name} />
             </div>
-          </a>
+          </button>
         ))
       }
     </div>
   </div>
 </Layout>
+<script src="@/lib/asset-script.ts"></script>
