--- a/src/pages/ap.astro
+++ b/src/pages/ap.astro
@@ -1,33 +1,24 @@
 ---
-import { Image } from "astro:assets";
-import Obfuscated from "@/components/Obfuscated.astro";
+import AssetCard from "@/components/AssetCard.astro";
 import Layout from "@/layouts/Main.astro";
 import { ASSET_URL, type Asset } from "@/lib/asset";
-import { LayoutGrid } from "lucide-astro";
+import { LayoutGrid, PlusCircle } from "lucide-astro";
 const apps: Asset[] = await (await fetch(`${ASSET_URL}/json/apps.json`)).json();
+const customApps = (Astro.cookies.get("asset.app")?.json() as Asset[]) ?? [];
 ---
 
 <Layout>
-  <div class="flex justify-center py-8 flex-col items-center">
-    <div class="text-4xl font-bold text-text-secondary inline-flex mb-4">
+  <div class="flex justify-center py-8 flex-col items-center gap-4">
+    <div class="text-4xl font-bold text-text-secondary inline-flex">
       <LayoutGrid class="size-12 mr-2" />
       Apps
     </div>
+    <button class="p-4 bg-interactive hover:bg-interactive-secondary rounded-md font-semibold inline-flex items-center" data-type="app" id="add-asset">
+      <PlusCircle class="size-5 mr-2" />
+      Add App
+    </button>
     <div class="flex flex-wrap justify-center gap-4 flex-row mt-30">
-      {
-        apps.map((app) => (
-          <button data-asset={JSON.stringify(app)}>
-            <div class="flex flex-col items-center p-4 bg-secondary size-48 rounded-md space-y-4 hover:bg-interactive duration-150">
-              <Image loading="eager" src={ASSET_URL + app.image} alt={app.name} height={145} width={145} class="size-24 rounded-md" />
-              <Obfuscated
-                class="text-center font-semibold text-xl text-wrap"
-                class:list={{ "text-red-600": app.error, "text-yellow-400": app.partial }}
-                text={app.name}
-              />
-            </div>
-          </button>
-        ))
-      }
+      {[...customApps, ...apps].map((app) => <AssetCard asset={app} />)}
     </div>
   </div>
 </Layout>
