--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const splashText = [
     <div id="form" class="flex mt-4 flex-col items-center justify-center gap-4">
       <span class="text-accent">{splashText[Math.floor(Math.random() * splashText.length)]}</span>
       <input
-        class="h-16 rounded-md w-1/2 py-3 px-4 placeholder-text-secondary leading-tight focus:outline-none bg-interactive border-border"
+        class="h-16 rounded-md w-1/2 py-3 px-4 placeholder-text leading-tight focus:outline-none bg-interactive border-border"
         placeholder="Search"
         id="search"
       />
