chore: update deps and remove dayisyui (we're making our own ui lib)

--- a/src/global.css
+++ b/src/global.css
@@ -18,12 +18,7 @@
 }
 
 @layer base {
-    body {
-        /* background-image: var(--background-image); */
-        @apply h-full font-sans bg-background text-text;
-    }
-
-    * {
-        @apply border-border;
-    }
+   body {
+      @apply h-full;
+   }
 }
